# browser-proxy

./: .gitignore  Cargo.toml  README.md  config.example.yaml
docs/superpowers/plans/: 2026-07-10-vpn-routes-v2.md  2026-07-10-vpn-routes.md  2026-07-11-builtin-tor.md
docs/superpowers/specs/: 2026-07-10-browser-proxy-design.md  2026-07-10-vpn-routes-design.md  2026-07-10-vpn-routes-v2-design.md  2026-07-11-builtin-tor-design.md  2026-07-11-insecure-tls-fallback-design.md  2026-07-11-settings-search-dns-design.md
scripts/: fetch-assets.mjs  package.json
src/: assets.rs  config.rs  dns.rs  lib.rs  main.rs  metrics.rs  route.rs  server.rs  tls.rs  tor.rs  wireguard.rs  wisp.rs
static/: autocomplete.js  index.html  index.js  proxy-esc.js  register-sw.js  search-engines.js  search.js  style.css  sw.js
static/hybrid/: index.mjs
tests/: dns_endpoint.rs  http_routing.rs  socks_routing.rs  tor_smoke.rs  wireguard.rs  wisp_integration.rs
