[package]
name = "browser-proxy"
version = "0.1.0"
edition = "2021"
description = "Self-hosted web proxy: Scramjet client + Rust Wisp backend"
license = "MIT"

[[bin]]
name = "browser-proxy"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time", "signal"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "set-header", "trace"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
# Embeds the `static/` frontend + vendored client assets into the binary at compile time, so a
# release build is self-contained (no `static/` dir needs to ship alongside it). `mime-guess`
# provides per-file content types. In debug builds it reads `static/` from disk (live edits).
rust-embed = { version = "8", features = ["mime-guess", "include-exclude"] }
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_yaml_ng = "0.10"
serde_json = "1"
# Embedded WireGuard route (WARP registration + userspace tunnel).
boringtun = "0.7"
smoltcp = { version = "0.11", default-features = false, features = ["std", "medium-ip", "proto-ipv4", "socket-tcp", "socket-udp"] }
ureq = { version = "2", features = ["json"] }
base64 = "0.22"
rand = "0.8"
# Embedded Tor route (in-process arti-client; no external tor/arti daemon).
# Default features keep tokio + native-tls (schannel on Windows — no OpenSSL); onion-service-client
# adds .onion support. With the tokio feature, arti's DataStream implements tokio's AsyncRead/Write
# directly, so no futures<->tokio bridge crate is needed.
# `static-sqlite` compiles SQLite from source (arti caches the Tor directory in SQLite) so no
# system sqlite3 library is required to link.
arti-client = { version = "0.44", features = ["onion-service-client", "static-sqlite"] }
tor-rtcompat = "0.44"
# Server-side DNS-over-HTTPS resolver for the `direct` route (custom DNS selection).
# `https-ring` = DoH over rustls with the ring provider (matches arti's TLS stack);
# `webpki-roots` bundles the Mozilla root store so DoH cert validation needs no OS trust store.
hickory-resolver = { version = "0.26", features = ["https-ring", "webpki-roots"] }
# TLS termination (optional HTTPS). `tls-rustls-no-provider` keeps axum-server from pulling
# aws-lc-rs (which needs a C toolchain / NASM on Windows); we install rustls' ring provider
# ourselves. ring is already in the tree (arti + hickory DoH), so this adds no new crypto backend.
axum-server = { version = "0.7", default-features = false, features = ["tls-rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
# Self-signed cert generated at startup when TLS is on with no cert/key. `ring` backend (not the
# default aws-lc-rs) keeps the Windows build toolchain-free and reuses the provider already in-tree.
rcgen = { version = "0.13", default-features = false, features = ["pem", "ring"] }

[dev-dependencies]
tokio-tungstenite = "0.24"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
